# mlx90640_capture

./: CMakeList.txt  CMakeLists.txt  README.md  mlx90640_playbook.yml  redis_playbook.yml
src/: .gitignore  manual_build.sh  mlx90640_buffer.proto  mlx90640_capture.cpp  mlx90640_config.h.in
templates/: redis.conf  redis_users.acl
